[gd_scene load_steps=5 format=3 uid="uid://cjjwcbage8y5l"]

[ext_resource type="Texture2D" uid="uid://bkjpl134ahvvk" path="res://scenes/environment/box/box.png" id="1_ggcv1"]
[ext_resource type="Script" path="res://scenes/environment/moving platform/moving_platform.gd" id="1_kglqj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tpxls"]
size = Vector2(32, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j1o8l"]
size = Vector2(32, 1)

[node name="MovingPlatform" type="Path2D"]
texture_filter = 1
script = ExtResource("1_kglqj")

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="."]
position = Vector2(2, 0.999878)
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="AnimatableBody2D"]
scale = Vector2(2, 0.5)
texture = ExtResource("1_ggcv1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D"]
shape = SubResource("RectangleShape2D_tpxls")

[node name="Area2D" type="Area2D" parent="AnimatableBody2D"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D/Area2D"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_j1o8l")

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2(2, 0.999878)
rotates = false
loop = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PathFollow2D"]
remote_path = NodePath("../../AnimatableBody2D")

[node name="RemotePlayerTransform" type="RemoteTransform2D" parent="PathFollow2D"]

[node name="PauseTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="AnimatableBody2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="AnimatableBody2D/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_pause_timer_timeout"]
